--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 </head>
 <body>
     <header>
-        <img src="https://ejemplo.com/tu-imagen.jpg" alt="Profile" class="profile-img">
+        <img src="https://avatars.githubusercontent.com/u/202360193?v=4" alt="Profile" class="profile-img">
         <h1>Mi Portafolio</h1>
         <p>Desarrollador Android & Web</p>
     </header>
