--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>rabbit hole | Soluciones Digitales</title>
+  <title>Diven Lozano | Portafolio Profesional</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"/>
   <style>
     :root {
@@ -93,6 +93,31 @@
       margin-bottom: 2rem;
       color: var(--primary);
     }
+    .about-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem;
+      align-items: center;
+      justify-content: center;
+      background: var(--surface);
+      padding: 2rem;
+      border-radius: 16px;
+      box-shadow: 0 8px 16px rgba(0,0,0,0.05);
+      backdrop-filter: blur(10px);
+    }
+    .about-img img {
+      width: 200px;
+      border-radius: 50%;
+      border: 4px solid var(--primary);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
+    .about-text {
+      max-width: 600px;
+    }
+    .about-text h3 {
+      margin-bottom: 1rem;
+      color: var(--secondary);
+    }
     .projects-grid {
       display: grid;
       gap: 2rem;
@@ -138,18 +163,39 @@
     <nav>
       <ul>
         <li><a href="#inicio">Inicio</a></li>
+        <li><a href="#about">Sobre mí</a></li>
         <li><a href="#portfolio">Portafolio</a></li>
         <li><a href="#contact">Contacto</a></li>
       </ul>
     </nav>
   </header>
+
   <section class="hero" id="inicio">
     <div>
-      <h1>Soluciones Digitales Profesionales</h1>
-      <p>Diseño, desarrollo y estrategia para el mundo digital moderno.</p>
+      <h1>Diven Lozano Martínez</h1>
+      <p>Desarrollador web y técnico en formación apasionado por crear soluciones digitales modernas.</p>
       <a href="#portfolio" class="btn-primary">Ver Portafolio</a>
     </div>
   </section>
+
+  <section id="about">
+    <h2 class="section-title">Sobre mí</h2>
+    <div class="about-container">
+      <div class="about-img">
+        <img src="https://avatars.githubusercontent.com/u/202360193?v=4" alt="Diven Lozano">
+      </div>
+      <div class="about-text">
+        <h3>Hola, soy Diven 👋</h3>
+        <p>
+          Tengo 19 años y soy de Buenaventura, Valle del Cauca (Colombia). Estudié en la Institución Educativa Técnica y Educatorial Gerardo Valencia Cano, donde cursé grado 11. Actualmente estoy formándome como Técnico en Informática.
+        </p>
+        <p>
+          Me apasiona la tecnología y domino varios lenguajes como <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, <strong>Python</strong>, <strong>PHP</strong> y <strong>Ruby</strong>. Mi objetivo es crear herramientas digitales útiles, rápidas y elegantes.
+        </p>
+      </div>
+    </div>
+  </section>
+
   <section id="portfolio">
     <h2 class="section-title">Portafolio</h2>
     <div class="projects-grid" id="projectsContainer">
@@ -157,6 +203,7 @@
     </div>
     <p id="loading" style="text-align:center;">Cargando proyectos...</p>
   </section>
+
   <section id="contact">
     <h2 class="section-title">Contacto</h2>
     <form class="contact-form" id="contactForm">
@@ -166,9 +213,11 @@
       <button class="btn-primary" type="submit">Enviar</button>
     </form>
   </section>
+
   <footer>
-    <p>&copy; 2025 rabbit hole. Todos los derechos reservados.</p>
+    <p>&copy; 2025 Diven Lozano. Todos los derechos reservados.</p>
   </footer>
+
   <script>
     const GITHUB_USER = "lozanoTH";
     const BOT_TOKEN = "7305607951:AAHxeB-mnSoXBTLW8ZcSVtkH_3ZQitgdkUY";
